# librml

./: .gitignore  .pre-commit-config.yaml  CCBYNC3DE.markdown  CCBYNC4.markdown  CCBYNCND3DE.markdown  CCBYNCSA3DE.markdown  CCBYND3DE.markdown  CNAME  CODEOWNERS  Gemfile  LICENSE  README.md  _config.yml  allgfaq.markdown  detail.markdown  faq.markdown  index.markdown  index.md  json.markdown  librml-pages.code-workspace  rel.markdown  rel.md  schema.markdown  techfaq.markdown  templates.markdown  xsdschema.markdown
_data/: navi.yml
_includes/: navi.markdown
_layouts/: default.html
_sass/: librml.scss
adjustments/: adjustments.md  adjustments_elements_existing  adjustments_elements_existing.md  adjustments_elements_new  adjustments_elements_new.md  adjustments_examples  adjustments_examples.md  ansicht.md  aufsicht.md  collum.md  collum.xml  grafik.md  klemperer.md  klemperer.xml  kuenstler.xml  kuenstlerbuecher.md  mediathek.md  persrecht.md  saechsischezeitung.md  zeitung.xml
api/: api.markdown  python.markdown
builder/: index.html
examples/: adjustments.md  agreement.json  agreement.markdown  agreement.md  agreement.xml  agreement.yaml  authentification.json  authentification.markdown  authentification.md  authentification.xml  authentification.yaml  collum.xml  concurrent.json  (+53 more)
librml-py/: MANIFEST.in  README.md  pyproject.toml
librml-py/librml/: __init__.py  __main__.py  cli.py  converter.py  validator.py
librml-py/librml/schemas/: librml.xsd
librml-py/tests/: test_cli.py  test_converter.py  test_validator.py
librml-py/tests/data/: minimal.xml
(+169 files in other folders)
